--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": " nodemon index.js",
-    "start": " node index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.6",
     "dotenv": "^16.0.3",
+    "jsdom": "^21.1.0",
     "node-telegram-bot-api": "^0.61.0",
     "nodemon": "^2.0.20"
   }
